xlib/Xlib.nim


const 
  XIMPreeditArea* = 0x00000001
  XIMPreeditCallbacks* = 0x00000002
  XIMPreeditPosition* = 0x00000004
  XIMPreeditNothing* = 0x00000008
  XIMPreeditNone* = 0x00000010
  XIMStatusArea* = 0x00000100
  XIMStatusCallbacks* = 0x00000200
  XIMStatusNothing* = 0x00000400
  XIMStatusNone* = 0x00000800
  XNVaNestedList* = "XNVaNestedList"
  XNQueryInputStyle* = "queryInputStyle"
  XNClientWindow* = "clientWindow"
  XNInputStyle* = "inputStyle"
  XNFocusWindow* = "focusWindow"
  XNResourceName* = "resourceName"
  XNResourceClass* = "resourceClass"
  XNGeometryCallback* = "geometryCallback"
  XNDestroyCallback* = "destroyCallback"
  XNFilterEvents* = "filterEvents"
  XNPreeditStartCallback* = "preeditStartCallback"
  XNPreeditDoneCallback* = "preeditDoneCallback"
  XNPreeditDrawCallback* = "preeditDrawCallback"
  XNPreeditCaretCallback* = "preeditCaretCallback"
  XNPreeditStateNotifyCallback* = "preeditStateNotifyCallback"
  XNPreeditAttributes* = "preeditAttributes"
  XNStatusStartCallback* = "statusStartCallback"
  XNStatusDoneCallback* = "statusDoneCallback"
  XNStatusDrawCallback* = "statusDrawCallback"
  XNStatusAttributes* = "statusAttributes"
  XNArea* = "area"
  XNAreaNeeded* = "areaNeeded"
  XNSpotLocation* = "spotLocation"
  XNColormap* = "colorMap"
  XNStdColormap* = "stdColorMap"
  XNForeground* = "foreground"
  XNBackground* = "background"
  XNBackgroundPixmap* = "backgroundPixmap"
  XNFontSet* = "fontSet"
  XNLineSpace* = "lineSpace"
  XNCursor* = "cursor"
  XNQueryIMValuesList* = "queryIMValuesList"
  XNQueryICValuesList* = "queryICValuesList"
  XNVisiblePosition* = "visiblePosition"
  XNR6PreeditCallback* = "r6PreeditCallback"
  XNStringConversionCallback* = "stringConversionCallback"
  XNStringConversion* = "stringConversion"
  XNResetState* = "resetState"
  XNHotKey* = "hotKey"
  XNHotKeyState* = "hotKeyState"
  XNPreeditState* = "preeditState"
  XNSeparatorofNestedList* = "separatorofNestedList"
  XBufferOverflow* = - 1
  XLookupNone* = 1
  XLookupChars* = 2
  XXLookupKeySym* = 3
  XLookupBoth* = 4

type 
  XVaNestedList* = pointer
  XIMCallback* = object 
    client_data*: XPointer
    callback*: XIMProc

  XICCallback* = object 
    client_data*: XPointer
    callback*: XICProc

  XIMFeedback* = culong

const 
  XIMReverse* = 1
  XIMUnderline* = (1 shl 1)
  XIMHighlight* = (1 shl 2)
  XIMPrimary* = (1 shl 5)
  XIMSecondary* = (1 shl 6)
  XIMTertiary* = (1 shl 7)
  XIMVisibleToForward* = (1 shl 8)
  XIMVisibleToBackword* = (1 shl 9)
  XIMVisibleToCenter* = (1 shl 10)

type 
  INNER_C_UNION_14444843517302524627* = object  {.union.}
    multi_byte*: cstring
    wide_char*: cstring

  XIMText* = object 
    length*: cushort
    feedback*: ptr XIMFeedback
    encoding_is_wchar*: Bool
    string*: INNER_C_UNION_14444843517302524627

  XIMPreeditState* = culong

const 
  XIMPreeditUnKnown* = 0
  XIMPreeditEnable* = 1
  XIMPreeditDisable* = (1 shl 1)

type 
  XIMPreeditStateNotifyCallbackStruct* = object 
    state*: XIMPreeditState

  XIMResetState* = culong

const 
  XIMInitialState* = 1
  XIMPreserveState* = (1 shl 1)

type 
  XIMStringConversionFeedback* = culong

const 
  XIMStringConversionLeftEdge* = (0x00000001)
  XIMStringConversionRightEdge* = (0x00000002)
  XIMStringConversionTopEdge* = (0x00000004)
  XIMStringConversionBottomEdge* = (0x00000008)
  XIMStringConversionConcealed* = (0x00000010)
  XIMStringConversionWrapped* = (0x00000020)

type 
  INNER_C_UNION_1247244991416548516* = object  {.union.}
    mbs*: cstring
    wcs*: cstring

  XIMStringConversionText* = object 
    length*: cushort
    feedback*: ptr XIMStringConversionFeedback
    encoding_is_wchar*: Bool
    string*: INNER_C_UNION_1247244991416548516

  XIMStringConversionPosition* = cushort
  XIMStringConversionType* = cushort

const 
  XIMStringConversionBuffer* = (0x00000001)
  XIMStringConversionLine* = (0x00000002)
  XIMStringConversionWord* = (0x00000003)
  XIMStringConversionChar* = (0x00000004)

type 
  XIMStringConversionOperation* = cushort

const 
  XIMStringConversionSubstitution* = (0x00000001)
  XIMStringConversionRetrieval* = (0x00000002)

type 
  INNER_C_UNION_6064744601235878808* = object  {.union.}
    text*: ptr XIMText
    bitmap*: Pixmap

  XIMCaretDirection* {.size: sizeof(cint).} = enum 
    XIMForwardChar, XIMBackwardChar, XIMForwardWord, XIMBackwardWord, 
    XIMCaretUp, XIMCaretDown, XIMNextLine, XIMPreviousLine, XIMLineStart, 
    XIMLineEnd, XIMAbsolutePosition, XIMDontChange
  XIMStringConversionCallbackStruct* = object 
    position*: XIMStringConversionPosition
    direction*: XIMCaretDirection
    operation*: XIMStringConversionOperation
    factor*: cushort
    text*: ptr XIMStringConversionText

  XIMPreeditDrawCallbackStruct* = object 
    caret*: cint
    chg_first*: cint
    chg_length*: cint
    text*: ptr XIMText

  XIMCaretStyle* {.size: sizeof(cint).} = enum 
    XIMIsInvisible, XIMIsPrimary, XIMIsSecondary
  XIMPreeditCaretCallbackStruct* = object 
    position*: cint
    direction*: XIMCaretDirection
    style*: XIMCaretStyle

  XIMStatusDataType* {.size: sizeof(cint).} = enum 
    XIMTextType, XIMBitmapType
  XIMStatusDrawCallbackStruct* = object 
    `type`*: XIMStatusDataType
    data*: INNER_C_UNION_6064744601235878808

  XIMHotKeyTrigger* = object 
    keysym*: KeySym
    modifier*: cint
    modifier_mask*: cint

  XIMHotKeyTriggers* = object 
    num_hot_key*: cint
    key*: ptr XIMHotKeyTrigger

  XIMHotKeyState* = culong




const 
  XIMHotKeyStateON* = (0x00000001)
  XIMHotKeyStateOFF* = (0x00000002)

type 
  XIMValuesList* = object 
    count_values*: cushort
    supported_values*: cstringArray


var Xdebug* {.importc: "_Xdebug", dynlib: libX11.}: cint

proc XLoadQueryFont*(a2: ptr Display; a3: cstring): ptr XFontStruct {.cdecl, 
    importc: "XLoadQueryFont", dynlib: libX11.}
proc XQueryFont*(a2: ptr Display; a3: XID): ptr XFontStruct {.cdecl, 
    importc: "XQueryFont", dynlib: libX11.}
proc XGetMotionEvents*(a2: ptr Display; a3: Window; a4: Time; a5: Time; 
                       a6: ptr cint): ptr XTimeCoord {.cdecl, 
    importc: "XGetMotionEvents", dynlib: libX11.}
proc XDeleteModifiermapEntry*(a2: ptr XModifierKeymap; a3: KeyCode; a4: cint): ptr XModifierKeymap {.
    cdecl, importc: "XDeleteModifiermapEntry", dynlib: libX11.}
proc XGetModifierMapping*(a2: ptr Display): ptr XModifierKeymap {.cdecl, 
    importc: "XGetModifierMapping", dynlib: libX11.}
proc XInsertModifiermapEntry*(a2: ptr XModifierKeymap; a3: KeyCode; a4: cint): ptr XModifierKeymap {.
    cdecl, importc: "XInsertModifiermapEntry", dynlib: libX11.}
proc XNewModifiermap*(a2: cint): ptr XModifierKeymap {.cdecl, 
    importc: "XNewModifiermap", dynlib: libX11.}
proc XCreateImage*(a2: ptr Display; a3: ptr Visual; a4: cuint; a5: cint; 
                   a6: cint; a7: cstring; a8: cuint; a9: cuint; a10: cint; 
                   a11: cint): ptr XImage {.cdecl, importc: "XCreateImage", 
    dynlib: libX11.}
proc XInitImage*(a2: ptr XImage): Status {.cdecl, importc: "XInitImage", 
    dynlib: libX11.}
proc XGetImage*(a2: ptr Display; a3: Drawable; a4: cint; a5: cint; a6: cuint; 
                a7: cuint; a8: culong; a9: cint): ptr XImage {.cdecl, 
    importc: "XGetImage", dynlib: libX11.}
proc XGetSubImage*(a2: ptr Display; a3: Drawable; a4: cint; a5: cint; a6: cuint; 
                   a7: cuint; a8: culong; a9: cint; a10: ptr XImage; a11: cint; 
                   a12: cint): ptr XImage {.cdecl, importc: "XGetSubImage", 
    dynlib: libX11.}

proc XOpenDisplay*(a2: cstring): ptr Display {.cdecl, importc: "XOpenDisplay", 
    dynlib: libX11.}
proc XrmInitialize*() {.cdecl, importc: "XrmInitialize", dynlib: libX11.}
proc XFetchBytes*(a2: ptr Display; a3: ptr cint): cstring {.cdecl, 
    importc: "XFetchBytes", dynlib: libX11.}
proc XFetchBuffer*(a2: ptr Display; a3: ptr cint; a4: cint): cstring {.cdecl, 
    importc: "XFetchBuffer", dynlib: libX11.}
proc XGetAtomName*(a2: ptr Display; a3: Atom): cstring {.cdecl, 
    importc: "XGetAtomName", dynlib: libX11.}
proc XGetAtomNames*(a2: ptr Display; a3: ptr Atom; a4: cint; a5: cstringArray): Status {.
    cdecl, importc: "XGetAtomNames", dynlib: libX11.}
proc XGetDefault*(a2: ptr Display; a3: cstring; a4: cstring): cstring {.cdecl, 
    importc: "XGetDefault", dynlib: libX11.}
proc XDisplayName*(a2: cstring): cstring {.cdecl, importc: "XDisplayName", 
    dynlib: libX11.}
proc XKeysymToString*(a2: KeySym): cstring {.cdecl, importc: "XKeysymToString", 
    dynlib: libX11.}
